--- a/icons.css
+++ b/icons.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
   font-family: 'icomoon';
   src:  url('fonts/icomoon.eot?mspkkg');
   src:  url('fonts/icomoon.eot?mspkkg#iefix') format('embedded-opentype'),
@@ -7,7 +7,7 @@
     url('fonts/icomoon.svg?mspkkg#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
-}
+} */
 
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
